[tool.poetry]
name = "silentserenity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pymongo = "^3.11.0"
tweepy = "^3.9.0"
youtube-dl = "^2020.7.28"
discord-webhook = "^0.8.0"
bs4 = "^0.0.1"
lavalink = "^3.1.2"
pytz = "^2020.1"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
